# GOIT_python11_web_module_hw10

./: README.md  pyproject.toml
hw10_project/: db.sqlite3  manage.py
hw10_project/hw10_project/: settings.py  urls.py
hw10_project/quotes/: forms.py  models.py  urls.py  utils.py  views.py
hw10_project/quotes/migrations/: 0001_initial.py  0002_remove_author_created_at_alter_tag_name.py
hw10_project/quotes/static/quotes/: style.css
hw10_project/quotes/templates/quotes/: add_author.html  author.html  base.html  index.html
hw10_project/quotes/templatetags/: extract.py
hw10_project/users/: forms.py  urls.py  views.py
hw10_project/users/templates/users/: password_reset_complete.html  password_reset_email.html  signin.html  signup.html
hw10_project/utils/: add_quotes_to_mongo.py  authors.json  migration.py
