[tool.poetry]
name = "goit-python11-web-module-hw10"
version = "0.1.0"
description = ""
authors = ["dzvenyslavavovk <dzvinavovk.25@gmail.com>"]
readme = "README.md"
packages = [{include = "goit_python11_web_module_hw10"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.2"
pymongo = "^4.4.0"
psycopg2-binary = "^2.9.6"
django-environ = "^0.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
